--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -19,7 +19,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
           USERNAME: ${{ github.repository_owner }}
-
+          SETTING_JSON: profile-3d-settings.json
+          
       - name: Commit & Push
         run: |
           git config user.name github-actions
